--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@eslint/compat": "^1.2.9",
     "@eslint/js": "^9.27.0",
     "@types/bcrypt": "^5.0.2",
