feat: add redis and rate limiter
Signed-off-by: stewie <Hieu DOng>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,3 +18,9 @@ services:
       - listen_addresses=*
       - -c
       - wal_level=logical
+  redis:
+    image: redis:7-alpine
+    ports:
+      - 6379:6379
+    tmpfs:
+      - /data
