--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,11 @@ ELECTRIC_SHAPE_URL=http://localhost:3000/v1/shape
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 GOOGLE_CALLBACK_URL=http://localhost:3001/auth/google/callback
+
+# Redis Configuration
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
+REDIS_TLS=
+REDIS_OFFLINE_QUEUE=true
