--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@hono/node-server": "^1.14.1",
     "@hono/swagger-ui": "^0.5.1",
     "@hono/zod-validator": "^0.5.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
+    "debug": "^4.4.1",
     "dotenv": "^16.5.0",
     "hono": "^4.7.8",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "ms": "^2.1.3",
     "pg": "^8.15.6",
@@ -37,7 +39,6 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/compat": "^1.2.9",
     "@eslint/js": "^9.27.0",
-    "@types/bcrypt": "^5.0.2",
     "@types/express-session": "^1.18.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/ms": "^2.1.0",
