--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@hono/node-server": "^1.14.1",
     "@hono/swagger-ui": "^0.5.1",
     "@hono/zod-validator": "^0.5.0",
+    "@socket.io/redis-adapter": "^8.3.0",
+    "@types/socket.io": "^3.0.2",
     "bcryptjs": "^3.0.2",
     "debug": "^4.4.1",
     "dotenv": "^16.5.0",
@@ -31,6 +33,8 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "winston": "^3.17.0",
     "zod": "^3.24.4"
   },
